Implemented GET-query "/settings/{server}"
